--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   web:
-    image: php:7.4-apache
+    #image: php:7.4-apache
+    build: .
     ports:
       - "8080:80"
     volumes:
